--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -662,7 +662,8 @@ The same as Table~\ref{tab:collected} for regularized (high dimensional) predict
 
 
 \subsection{Related Literature}
-\cite{ojala_permutation_2010} study the power of two accuracy tests: one testing the ``no signal'' null hypothesis, and the other testing the ``independent features'' null hypothesis. 
+\cite{ojala_permutation_2010} study the power of two accuracy tests differing in the permutation scheme:
+One testing the ``no signal'' null hypothesis, and the other testing the ``independent features'' null hypothesis. 
 They perform an asymptotic analysis, and a simulation study. 
 They also apply various classifiers to various data sets. 
 Their emphasis is the effect of the underlying classifier on the power, and the potential of the ``independent features'' test for feature selection.
@@ -672,22 +673,23 @@ This is a very different emphasis from our own.
 \cite{olivetti_induction_2012} and \cite{olivetti_statistical_2014} looked into the problem of choosing a good accuracy test. 
 They propose a new test they call an \emph{independence test}, and demonstrate by simulation that it has more power than other accuracy tests, and can deal with non-balanced data sets. 
 We did not include this test in the battery we compared, but we note the following: 
-(a) The independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. It may thus be improved with the methods discussed in this section, before the application of \cite{olivetti_induction_2012}'s independence test. 
-(b) In contrast with the underlying motivation of \cite{olivetti_induction_2012}'s independence test, we did not find that balancing the data folds is crucial for an accuracy test. 
+(a) The independence test of \cite{olivetti_induction_2012} relies on a discrete test statistic. 
+It may probably be improved with the methods discussed in this section, before the application of \cite{olivetti_induction_2012}'s independence test. 
+(b) In contrast with the underlying motivation of \cite{olivetti_induction_2012}'s independence test, we did not find that balancing the data folds affects the power of the test. 
 
 
-\cite{golland_permutation_2005} study accuracy tests using simulation, neuroimaging data, genetic data, and analytically.
+\cite{golland_permutation_2003} and \cite{golland_permutation_2005} study accuracy tests using simulation, neuroimaging data, genetic data, and analytically.
 Their analytic results formalize our intuition from Section~\ref{sec:introduction} on the effect of concentration of the accuracy statistic:
-The finite Vapnik–Chervonenkis (VC) dimension requirement \citep[Sec 4.3]{golland_permutation_2003} prevents the permutation p-value from (asymptotically) concentrating near $1$. 
-Like ourselves, they also find that the power increases with the size of the test set (Figure~4, middle). 
-This is seen in their Figure~4, where the size of the test-set, $K$, governs the discretization. 
+The finite Vapnik–Chervonenkis dimension requirement \citep[Sec 4.3]{golland_permutation_2005} prevents the permutation p-value from (asymptotically) concentrating near $1$. 
+Like ourselves, they also find that the power increases with the size of the test set. 
+This is seen in Fig.4 of \citet{golland_permutation_2005}, where the size of the test-set, $K$, governs the discretization. 
 Since they permute features, not labels, then all their permutation samples are balanced, and there is no issue of refolding. 
 
 \cite{golland_permutation_2005} simulate the power of accuracy tests by sampling from a Gaussian mixture family of models, and not from a location family as our own simulations. 
 Under their model 
-$(x_i|y_i=1) \sim p \gauss{\mu_1,I}+ (1-p) \gauss{\mu_2,I}$ 
+$$(x_i|y_i=1) \sim p \gauss{\mu_1,I}+ (1-p) \gauss{\mu_2,I}$$ 
 and 
-$(x_i|y_i=-1) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}$.
+$$(x_i|y_i=-1) \sim (1-p) \gauss{\mu_1,I}+ p \gauss{\mu_2,I}.$$
 Varying $p$ interpolates between the null distribution $(p=0.5)$ and a location shift model $(p=0)$. 
 We now perform the same simulation as \cite{golland_permutation_2005}, after parameterizing $p$ so that $p=0$ corresponds to the null model, and in the same dimensionality as our previous simulations
 We find that also in this mixture class of models a population test has more power than an accuracy test (Figure~\ref{fig:golland}).
@@ -712,7 +714,7 @@ We find that also in this mixture class of models a population test has more pow
 
 
 \subsection{Epilogue}
-Given all the above, we find the popularity of accuracy tests quite puzzling. 
+Given all the above, we find the popularity of accuracy tests for signal detection quite puzzling. 
 We believe this is due to a reversal of the inference cascade. 
 Researchers first fit a classifier, and then ask if the classes are any different.
 Were they to start by asking if classes are any different, and only then try to classify, then population tests would naturally arise as the preferred method. 
